[DMS-889] Formatting and wording improvements